--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
-sonar.projectName=my-project
-sonar.projectKey=my-organization_my-project
-sonar.organization=my-organization
+sonar.projectName=cpp-proj
+sonar.projectKey=laurawacrenier_cpp-proj
+sonar.organization=laurawacrenier
 sonar.projectVersion=1.0
 
 sonar.sources=src
