--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,8 @@
 sonar.projectKey=simo-vargasp-sonarsource_cpp-proj
 sonar.organization=simo-vargasp-sonarsource
+sonar.projectName=cpp-proj
+sonar.projectVersion=1.0
+sonar.sources=src
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=cpp-proj
@@ -10,3 +13,4 @@ sonar.organization=simo-vargasp-sonarsource
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+
