--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,16 +1,13 @@
 sonar.projectKey=simo-vargasp-sonarsource_cpp-proj
 sonar.organization=simo-vargasp-sonarsource
-sonar.projectName=cpp-proj
-sonar.projectVersion=1.0
-sonar.sources=src
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=cpp-proj
-#sonar.projectVersion=1.0
+sonar.projectName=cpp-proj
+sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
 
